# VerdictPDF

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: build.yml  test.yml
src/docparser/: api.py
src/verdictpdf/: api.py  auth.py  credits.py  extractor.py
tests/: test_convert.py
