[project]
name = "verdictpdf"
version = "0.1.0"
description = "Light‑weight PDF‑to‑JSON micro‑service"
authors = [{ name = "GioMint" }]
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "pdfplumber",
    "pytesseract",
    "python-multipart"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"